--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
 		"@nextcloud/dialogs": "^3.1.1",
 		"@nextcloud/router": "^1.2.0",
 		"@nextcloud/vue": "^3.3.0",
-		"vue": "^2.6.12",
-		"vue-core-video-player": "^0.2.0"
+		"vue": "^2.6.12"
 	},
 	"browserslist": [
 		"extends @nextcloud/browserslist-config"
